# dboebackend

./: .coverage  .gitignore  README.md  api-examples.md  create_fixtures.sh  nginx.default  pyproject.toml  test.yml
.github/workflows/: test.yml
annotations/: admin.py  api_views.py  filters.py  models.py  serializers.py
annotations/migrations/: 0009_remove_tag_emoji.py  0010_alter_annotation_options_alter_autor_artikel_options_and_more.py
belege/: admin.py  api_utils.py  api_views.py  models.py  query_utils.py  serializer_utils.py  serializers.py  tests.py
belege/fixtures/: dump.json
belege/management/commands/: collection_migration.py  index.py  index_paginated.py  link_places.py  tag_migration.py
belege/migrations/: 0045_beleg_tag.py  0046_beleg_collection.py  0047_alter_beleg_collection.py  0048_remove_beleg_bundesland_remove_kregion_bundesland_and_more.py  0049_beleg_sigle_delete_bundesland_and_more.py  0050_alter_beleg_tag.py
belege/templates/belege/partials/: listplace.j2
dboeannotation/: settings.py  urls.py
siglen/: admin.py  api_views.py  apps.py  filters.py  models.py  serializers.py
siglen/management/commands/: import_places.py
siglen/migrations/: 0001_initial.py  0002_alter_sigle_options_sigle_orig_names.py  0003_alter_sigle_orig_names.py
stats/: urls.py  views.py
templates/partials/: head.html
